--- a/Platzi-games/prepros-6.config
+++ b/Platzi-games/prepros-6.config
@@ -27,12 +27,15 @@
     {
       "path": "componentes/plantilla.pug",
       "imports": [
-        "componentes/head.pug"
+        "componentes/configuraciones.pug",
+        "componentes/head.pug",
+        "componentes/header.pug",
+        "componentes/footer.pug"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "settings"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
