--- a/Platzi-games/prepros-6.config
+++ b/Platzi-games/prepros-6.config
@@ -32,6 +32,12 @@
         "componentes/header.pug",
         "componentes/footer.pug"
       ]
+    },
+    {
+      "path": "reto.pug",
+      "imports": [
+        "componentes/menu.pug"
+      ]
     }
   ],
   "projectView": {
